--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "angular-ui-router": "^0.2.18",
-    "angular-bootstrap": "^1.1.2"
+    "angular-bootstrap": "^1.1.2",
+    "owl.carousel": "owl-carousel2#^2.0.0-beta.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
